# butteraugli

./: .bazelrc  BUILD  MODULE.bazel  README.md  WORKSPACE  avif.BUILD  build.bat  dav1d.BUILD  jconfig.h  jpeg.BUILD  png.BUILD  repos.bzl  webp.BUILD  zlib.BUILD
butteraugli/: Makefile  butteraugli_main.cc
