###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(name = "butteraugli")

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.14")

butteraugli_deps = use_extension("//:repos.bzl", "butteraugli_deps")
use_repo(butteraugli_deps, "jpeg_archive", "png_archive", "zlib_archive")
